# espresso-network

./: .env  .env.contracts.example  .gas-snapshot  .gitignore  .gitmodules  .solhint.json  .typos.toml  Cargo.toml  README.md  crates.js  docker-compose.yaml  flake.nix  help.html  hotshot.just  justfile  process-compose.yaml  renovate.json  search-index.js  settings.html  src-files.js
.cargo/: audit.toml
.config/: nextest.toml
.github/: dependabot.yml
alloy-compat/: Cargo.toml
alloy-compat/src/: lib.rs
alloy_compat/: all.html  index.html  sidebar-items.js
audits/: README.md
builder/: Cargo.toml  all.html  fn.run_builder_api_service.html  index.html
cdn_broker/: all.html  fn.main.html  index.html  struct.Args.html
cdn_marshal/: all.html  fn.main.html  index.html  struct.Args.html
cdn_whitelist/: all.html  fn.main.html  index.html  struct.Args.html
client/: Cargo.toml  all.html  index.html  struct.SequencerClient.html  type.FeeMerkleProof.html  type.SequencerApiVersion.html
client/src/: lib.rs
contracts/rust/adapter/: Cargo.toml
contracts/rust/adapter/src/: evm.rs  jellyfish.rs  lib.rs  light_client.rs  sol_types.rs  stake_table.rs
contracts/rust/adapter/src/bindings/: erc1967proxy.rs  esptoken.rs  feecontract.rs  iplonkverifier.rs  lightclient.rs  lightclientarbitrum.rs  lightclientarbitrumv2.rs  lightclientmock.rs  lightclientv2.rs  lightclientv2mock.rs  mod.rs  permissionedstaketable.rs  plonkverifier.rs  plonkverifierv2.rs  staketable.rs  timelock.rs
contracts/rust/deployer/: Cargo.toml
contracts/rust/deployer/src/: builder.rs  lib.rs  network_config.rs
contracts/rust/diff-test/: Cargo.toml
contracts/rust/diff-test/src/: main.rs
contracts/rust/gen-vk-contract/: Cargo.toml
contracts/rust/gen-vk-contract/src/: main.rs
deploy/: all.html  fn.main.html  index.html  struct.Options.html
dev_cdn/: all.html  fn.main.html  index.html  struct.Args.html
dev_rollup/: fn.parse_update.html  fn.parse_update_option.html  struct.Options.html  struct.UpdateArgs.html
diff_test/: all.html  enum.Action.html  fn.main.html  index.html  struct.Cli.html
doc/: architecture.md  upgrades.md
docker/: bridge.Dockerfile  builder.Dockerfile  cdn-broker.Dockerfile  cdn-marshal.Dockerfile  cdn-whitelist.Dockerfile  deploy.Dockerfile  dev-rollup.Dockerfile  espresso-dev-node.Dockerfile  marketplace-builder.Dockerfile  marketplace-solver.Dockerfile  nasty-client.Dockerfile  node-validator.Dockerfile  orchestrator.Dockerfile  prover-service.Dockerfile  sequencer.Dockerfile  staking-cli.Dockerfile  state-relay-server.Dockerfile  submit-transactions.Dockerfile  update-permissioned-stake-table.Dockerfile
espresso_bridge/: all.html  enum.Command.html  fn.balance.html  fn.deposit.html  fn.l1_balance.html  fn.main.html  index.html  struct.Balance.html  struct.Deposit.html  struct.L1Balance.html  struct.Options.html
espresso_contract_deployer/: all.html  constant.LIBRARY_PLACEHOLDER_ADDRESS.html  constant.MAX_HISTORY_RETENTION_SECONDS.html  enum.Contract.html  fn.build_provider.html  fn.build_random_provider.html  fn.build_signer.html  fn.deploy_fee_contract_proxy.html  fn.deploy_light_client_contract.html  fn.deploy_light_client_proxy.html  fn.deploy_stake_table_proxy.html  fn.deploy_timelock.html  fn.deploy_token_proxy.html  fn.is_contract.html  fn.is_proxy_contract.html  fn.transfer_ownership.html  fn.upgrade_light_client_v2.html  index.html  sidebar-items.js  struct.Contracts.html  struct.DeployedContracts.html  type.HttpProviderWithWallet.html
espresso_types/: all.html  index.html
eval_domain/: all.html  fn.main.html  index.html
gen_demo_genesis/: all.html  fn.main.html  index.html  struct.Args.html
gen_vk_contract/: all.html  fn.main.html  index.html  struct.Cli.html
geth-config/: genesis-default.json
hotshot/: all.html  constant.H_256.html  constant.H_512.html  enum.HotShotError.html  fn.load_start_epoch_info.html  index.html  struct.DoubleTwinsHandler.html  struct.HotShotInitializer.html  struct.InitializerEpochInfo.html  struct.MarketplaceConfig.html  struct.RandomTwinsHandler.html  struct.SystemContext.html  trait.TwinsHandlerState.html  type.Channel.html
hotshot-events-service/: Cargo.toml
hotshot-orchestrator/: Cargo.toml
hotshot-query-service/: Cargo.toml  README.md
hotshot-state-prover/: Cargo.toml
hotshot-task-impls/: Cargo.toml
hotshot_builder_api/: all.html  index.html
hotshot_builder_core/: all.html  index.html
hotshot_builder_core_refactored/: all.html  index.html
hotshot_contract_adapter/: all.html  fn.field_to_u256.html  fn.u256_to_field.html  index.html  sidebar-items.js
hotshot_events_service/: all.html  index.html
hotshot_example_types/: all.html  index.html
hotshot_fakeapi/: all.html  index.html
hotshot_libp2p_networking/: all.html  index.html
hotshot_macros/: all.html  enum.CrossTestDataBuilderError.html  enum.TestDataBuilderError.html  enum.TypePathBracketedArrayBuilderError.html  fn.cross_tests_internal.html  index.html  macro.cross_tests.html  macro.run_test.html  macro.test_scripts.html  struct.CrossTestData.html  struct.CrossTestDataBuilder.html  struct.TestData.html  (+4 more)
hotshot_task/: all.html  (+1 more)
sequencer-sqlite/: Cargo.toml
staking-cli/: Cargo.toml  DEVELOPER_DOCS.md  README.md  config.decaf.toml
staking-cli/src/: claim.rs  delegation.rs  demo.rs  deploy.rs  info.rs  l1.rs  lib.rs  main.rs  parse.rs  registration.rs
staking-cli/tests/: cli.rs
tests/: Cargo.toml
tests/common/: mod.rs
utils/: Cargo.toml  all.html  enum.Command.html  fn.main.html  index.html  sidebar-items.js  struct.Options.html
utils/keygen/: enum.Scheme.html  fn.gen_default_seed.html  fn.parse_seed.html  fn.run.html  index.html  struct.Options.html
utils/ns_aggregator/: fn.process_chunk.html  fn.run.html  index.html  sidebar-items.js  struct.Options.html
utils/pubkey/: enum.PrivateKey.html  fn.run.html  index.html  struct.Options.html
utils/reset_storage/: enum.Commands.html  enum.SequencerStorage.html  fn.reset_storage.html  fn.run.html  index.html
utils/src/: blocknative.rs  deployer.rs  lib.rs  stake_table.rs
(+6343 files in other folders)
