[package]
name = "sequencer-utils"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
testing = []

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
ark-serialize = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
clap = { workspace = true }
committable = "0.2"
hotshot = { workspace = true }
hotshot-example-types = { workspace = true }
log-panics = { workspace = true }
portpicker = { workspace = true }
serde = { workspace = true }
serde_json = "^1.0.113"
surf = "2.3.2"
tokio = { workspace = true }
toml = { workspace = true }
tracing = "0.1.37"
url = "2.3.1"
