[package]
name = "hotshot-contract-adapter"
description = "Cross-domain (between Solidity and Rust) utilities for type conversion and testing"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
hotshot-types = { workspace = true }
jf-pcs = { workspace = true }
jf-plonk = { workspace = true }
jf-utils = { workspace = true }
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
rand = { workspace = true }
serde = { workspace = true }

[dev-dependencies]

[[bin]]
name = "eval-domain"
path = "src/bin/eval_domain.rs"
