[package]
name = "diff-test-hotshot"
description = "Helpers and mocks for Forge-powered differential tests on HotShot-related contracts"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-std = { workspace = true }
clap = { version = "^4.4", features = ["derive"] }
hotshot-contract-adapter = { workspace = true }
hotshot-state-prover = { workspace = true }
hotshot-types = { workspace = true }
jf-pcs = { workspace = true }
jf-plonk = { workspace = true }
jf-signature = { workspace = true }
jf-utils = { workspace = true }
sha3 = { version = "0.10.8", default-features = false }

[[bin]]
name = "diff-test"
path = "src/main.rs"
