[package]
name = "gen-vk-contract"
description = "Executable for generating SNARK verification key contract"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { workspace = true }
ark-srs = { workspace = true }
clap = { workspace = true }
hotshot-contract-adapter = { workspace = true }
hotshot-state-prover = { workspace = true }
hotshot-types = { workspace = true }
jf-pcs = { workspace = true }
